--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_DIRVER=mysql
-DB_HOST=127.0.0.1
-DB_USER=root
-DB_PASSWORD=Qhfktor2!@$
+DB_HOST=44.210.143.154
+DB_USER=suni01
+DB_PASSWORD=1234
 DB_NAME=game_db
 DB_PORT=3306
 API_SECRET=rhwlsWkwhsskdjfuqek
